Added less file and a Rakefile to build the site and compile the less files to css. Lots of changes to layouts and some posts. Added about and copyright pages and js files for the crawler post.

--- a/_posts/2008-02-16-embedding-mplayer-in-a-pygtk-application.html
+++ b/_posts/2008-02-16-embedding-mplayer-in-a-pygtk-application.html
@@ -1,7 +1,8 @@
 --- 
 layout: post
 title: Embedding Mplayer in a PyGTK application
-category: it
+category: 
+- it
 tags: 
 - Programming
 type: post
