--- a/_posts/2011-11-10-look-it-job-market.html
+++ b/_posts/2011-11-10-look-it-job-market.html
@@ -3,18 +3,15 @@ layout: post
 title: A look at the IT job market
 summary: A quick analysis of the jobs on careers.stackoverflow.com
 tags: 
-- Blog
 - google visualization api
 - javascript
 - jquery
-- Programming
 - ruby
-- Web development
 type: post
 ---
-<script type="text/javascript" src="/code/careers/js/a.js"></script>
-<script type="text/javascript" src="/code/careers/js/charts.js"></script>
-<script type="text/javascript" src="/code/careers/js/raph.js"></script>
+<script type="text/javascript" src="/js/crawler/a.js"></script>
+<script type="text/javascript" src="/js/crawler/charts.js"></script>
+<script type="text/javascript" src="/js/crawler/raph.js"></script>
 <script type="text/javascript">
 load();
 </script>
