--- a/index.html
+++ b/index.html
@@ -3,16 +3,27 @@ layout: default
 title: Marco Dinacci
 ---
 <div id="home">
-    <h1>Things I've recently written</h1>
+    <h1>Recent posts</h1>
     <ul class="posts">
-        {% for post in site.posts %}
-          <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% for post in site.posts limit: 8 %}
+            {% if post.type == "post" %}
+            <li><span>{{ post.date | date_to_string }}</span> &raquo; 
+            <a href="{{ post.url }}">{{ post.title }}</a></li>
+            {% endif %}
         {% endfor %}
     </ul>
-    <h1>Things I've written not so recently</h1>
-    <ul class="posts">
-        {% for post in site.posts %}
-          <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    <p>&rarr; <a href="/blog.html">Browse all {{ site.posts | size }} posts</a></p>
+
+    <h1>Recent Photos</h1>
+    <ul class="photos">
+        {% for photo in site.photos limit: 5 %}
+        <li><span>{{ post.date | date_to_string }}</span> &raquo; 
+        <a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
     </ul>
+
+    <h1>Projects</h1>
+    <div>
+        {% include projects.html %}
+    </div>
 </div>
