Added icons, added more robust reset code and many other small changes to the pages.

--- a/_pages/2009-11-15-about.html
+++ b/_pages/2009-11-15-about.html
@@ -1,33 +1,15 @@
 --- 
-layout: page
+layout: post
 title: About
-published: true
-meta: 
-  _edit_last: "1"
-  _disable_convert_chars: "0"
-  _wp_page_template: default
-  _disable_convert_smilies: "0"
-  et_feather_settings: a:7:{s:14:"et_is_featured";s:1:"1";s:15:"et_fs_variation";s:1:"2";s:11:"et_fs_video";s:0:"";s:17:"et_fs_video_embed";s:0:"";s:11:"et_fs_title";s:0:"";s:17:"et_fs_description";s:9:"Who I am.";s:10:"et_fs_link";s:0:"";}
-  _thumbnail_id: "1533"
-  _disable_wptexturize: "0"
-  _disable_wpautop: "0"
-tags: []
-
+tags:
+	- Marco Dinacci
 type: page
 status: publish
 ---
-Hi, my name is Marco Dinacci, I worked for <strong>8 years</strong> in IT, telecommunications, multimedia and aerospace sectors, now my focus is on the <strong>development of <a href="http://www.android.com/about" title="Google Android">Google Android</a> and iPhone applications.</strong>
 
-<p>To know more about my previous working experience please take a look at my <a href="http://careers.stackoverflow.com/marcodinacci" alt="Profile on stackoverflow.com"><em>profile page</em></a> on careers.stackoverflow.com.</p>
+My name is Marco Dinacci and I am a software developer currently living in Cambridge, UK.
+This is a mostly a technical blog focusing on whatever I'm currently learning/working with at the moment.
 
-<p> From January 2010 to April 2011 <a href="http://www.intransitione.com/travels/">I travelled</a> on a shoestring around South America, I've been living in Bolivia, Peru, Ecuador and Colombia and  <strong>I speak fluently Spanish</strong> in addition to <strong>Italian, French and English</strong> and some <strong>Portuguese</strong>.(<em>Eu também entendo português mais falo muito poco</em>).I'm also studying Mandarin Chinese on <a href="http://www.memrise.com">memrise</a>.</p> 
-Articles and pictures about this travel are in the process of being moved to my <a href="http://marco.intransitione.com/blog">personal blog</a>.
+This blog is written in HTML5, Less and compiled to static pages using Jekyll.
 
-<p>To contact me for a job opportunity write a message in the form below (or on LinkedIn, see below).</p>
-
-You are kindly invited to <strong>connect with me on <a href="http://co.linkedin.com/in/marcodinacci" style="text-decoration:none;"></strong><span style="font: 80% Arial,sans-serif; color:#0783B6;"><img src="http://www.linkedin.com/img/webpromo/btn_in_20x15.png" width="20" height="15" alt="View Marco Dinacci's LinkedIn profile" style="vertical-align:middle" border="0">LinkedIn</span></a></p>
-
-<br><br>
-<h3>Contact Form:</h3>
-<a name="contact"></a>
-[contact-form 1 "Contact form 1"] 
+If you're interested in hiring me, please consider taking a look at my <a href="http://careers.stackoverflow.com/marcodinacci" alt="Profile on stackoverflow.com"><em>profile page</em></a> on careers.stackoverflow.com.</p>
