--- a/_posts/2011-07-14-movie-suggestions-beta-is-out.html
+++ b/_posts/2011-07-14-movie-suggestions-beta-is-out.html
@@ -2,20 +2,8 @@
 layout: post
 title: Movie Suggestions Beta is out
 published: true
-meta: 
-  _edit_last: "1"
-  _disable_convert_chars: "0"
-  et_feather_settings: a:1:{s:14:"et_is_featured";s:1:"0";}
-  _thumbnail_id: "1532"
-  _disable_convert_smilies: "0"
-  _disable_wptexturize: "0"
-  _disable_wpautop: "0"
 tags: 
-- Android
-- Featured
-- Programming
-type: post
-status: publish
+- android
 ---
 My first Android application <a href="https://market.android.com/details?id=com.marcodinacci.android.movierec">is out on the market</a>. Technically it's the second but the first I didn't release it and I don't have intention to.
 
