--- a/blog.html
+++ b/blog.html
@@ -1,8 +1,7 @@
 ---
 layout: default
 title: Blog
-description: I'm a software developer blablabla
-  This is my blog.
+description: This is my blog.
 ---
 <h2>Blog archive</h2>
 <div id="blog-archive">
