--- a/_posts/2011-05-04-how-to-detect-motion-on-an-android-device.html
+++ b/_posts/2011-05-04-how-to-detect-motion-on-an-android-device.html
@@ -1,27 +1,13 @@
 --- 
 layout: post
 title: How to detect motion on an Android device
-published: true
-meta: 
-  _edit_last: "1"
-  blr_date: "2011-05-17"
-  et_feather_settings: a:1:{s:14:"et_is_featured";s:1:"0";}
-  _thumbnail_id: "1546"
 tags: 
-- Android
 - android
-- Featured
-- linkedin
 - motion detection
-- Programming
-- programming
-type: post
-status: publish
 ---
 For learning purposes I've written <a href="http://www.intransitione.com/software/#pim" alt="PicInMotion description">PicInMotion</a>, a small Android application that automatically takes a picture when it detects motion in the camera preview. 
 
 This article explains how the simple motion detection mechanism works.
-<!--more-->
 
 <em>UPDATE: source code is available at <a href="https://github.com/mdinacci/PicInMotion/tree/standalone" title="github">github</a>, be sure to clone the <strong>standalone</strong> repository.</em>
 
@@ -35,7 +21,7 @@ First, we need to acquire the raw image data from the camera. To do it, we imple
 
 Here's the code:
 
-<pre class="prettyprint [lang-java|linenums:1]">
+{% highlight java %}
 @Override
 public void onPreviewFrame(byte[] data, Camera camera) {
     if (mMotionDetection.detect(data)) {
@@ -54,15 +40,15 @@ public void onPreviewFrame(byte[] data, Camera camera) {
 	}
     }
 }
-</pre>
+{% endhighlight %}
 
 <tt>data</tt> is a byte array containing the raw data coming from the camera hardware. Its format may change depending on the device and if the hardware supports multiple formats you can change it using:
 
-<pre class="prettyprint [lang-java|linenums:1]">
+{% highlight java %}
 Camera.Parameters parameters = mCamera.getParameters();
 parameters.setPreviewFormat(...);
 mCamera.setParameters(parameters);
-</pre>
+{% endhighlight %}
 
 In this post I'll assume the image format is <tt>PixelFormat.YCbCr_420_SP</tt> (now deprecated and to be replaced with<tt>ImageFormat.NV21</tt>.
 
@@ -71,7 +57,7 @@ The advantage of using <tt>ImageFormat.NV21</tt> is that being a YUV based, not 
 
 We can perform the motion detection on the luminance data only, it will be much faster than comparing two RGB images.
 
-<pre class="prettyprint [lang-java|linenums:1]">
+{% highlight java %}
 public boolean detect(byte[] data) {		
     // Create the "background" picture, the one that will be used
     // to check the next frame against.
@@ -97,11 +83,11 @@ public boolean detect(byte[] data) {
 	
     return motionDetected;
 } 
-</pre>
+{% endhighlight %}
 
 <tt>AndroidImageFactory</tt> is a simple factory class I've created that create a specific class depending on the image format. An extract:
 
-<pre class="prettyprint [lang-java|linenums:1]">
+{% highlight java %}
 public static AndroidImage createImage(byte[] data, Size<Integer,
     Integer> size, int format) {
     
@@ -116,14 +102,14 @@ public static AndroidImage createImage(byte[] data, Size<Integer,
 	    break;
    
     ...
-</pre>
+{% endhighlight %}
 
 <tt>AndroidImage</tt> and AndroidImage_NV21 are also classes I've created and that are part of my <tt>commons</tt> library. I'm not releasing yet the source code for these classes but you don't need it anyway.
 
 <h3>Comparing the images by luminance values</h3>
 This is the bulk of the article, here the <tt>isDifferent</tt> method in my <tt>AndroidImage_NV21</tt> class.
 
-<pre class="prettyprint [lang-java|linenums:1]">
+{% highlight java %}
 @Override
 public boolean isDifferent(AndroidImage other, int pixel_threshold, 
 	int threshold) {
@@ -156,7 +142,7 @@ public boolean isDifferent(AndroidImage other, int pixel_threshold,
 		
 	return totDifferentPixels > threshold;
 }
-</pre>
+{% endhighlight %}
 
 I use two different thresholds. The first acts on the pixel values and could be defined as:
 
