--- a/_posts/2011-04-30-play-a-video-on-youtube-using-an-intent.html
+++ b/_posts/2011-04-30-play-a-video-on-youtube-using-an-intent.html
@@ -31,4 +31,4 @@ The example uses a standard Youtube URL. The
 uri.getQueryParameter("v")
 {% endhighlight %}
 is used to extract the video ID from the URI itself, in this example the ID is
-<pre>opZ69P-0Jbc{% endhighlight %}
+{% highlight bash %}opZ69P-0Jbc{% endhighlight %}
