--- a/_posts/2011-05-10-advanced-listview-populating-a-list-with-images-and-text.html
+++ b/_posts/2011-05-10-advanced-listview-populating-a-list-with-images-and-text.html
@@ -162,7 +162,7 @@ As a reference, this is the content of the main layout:
 </LinearLayout>
 {% endhighlight %}
 
-Note that the <tt>ListView</tt> ID must be exactly <strong><pre>@android:id/list{% endhighlight %}</strong> or you'll get a <tt>RuntimeException</tt>.
+Note that the <tt>ListView</tt> ID must be exactly <strong><pre>@android:id/list</pre></strong> or you'll get a <tt>RuntimeException</tt>.
 
 That's it, you can download the <a href="http://www.intransitione.com/code/android/adv_listview_demo.zip">Eclipse project code</a> or post a comment if you have any question.
 
