--- a/index.html
+++ b/index.html
@@ -13,12 +13,9 @@ title: Marco Dinacci
     <p>&rarr; <a href="/blog.html">Browse all {{ site.posts | size }} posts</a></p>
 
     <h2>Recent Photos</h2>
-    <ul class="photos">
-        {% for photo in site.photos limit: 5 %}
-        <li><span>{{ post.date | date_to_string }}</span> &raquo; 
-        <a href="{{ post.url }}">{{ post.title }}</a></li>
-        {% endfor %}
-    </ul>
+    <div class="photos">
+        {% include photos.html %}
+    </div>
 
     <h2>Projects</h2>
     <div class="projects">
