Fixed feedburner link, moved icons generator post to _drafts, minor changes

--- a/copyright.html
+++ b/copyright.html
@@ -3,8 +3,10 @@ layout: default
 title: Copyright
 ---
 <p><a id="cc-logo" title="Creative Commons License" rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"></a>
-With the exceptions noted below, all content on this site is licensed under a<br />
+With the exceptions noted below, all content on this site (posts, photos, etc...) is licensed under a<br />
 <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.</p>
 
 <h4>Exceptions</h4>
-<p>Source code on this website is licensed under the MIT license.</p>
+<ul>
+    <li>All the source code on this website and the website source code itself is licensed under the MIT license.</li>
+</ul>
