Made the javascript work in job market post and added the json data. Lots of minor improvements.

--- a/_posts/2011-07-14-movie-suggestions-beta-is-out.html
+++ b/_posts/2011-07-14-movie-suggestions-beta-is-out.html
@@ -5,7 +5,7 @@ published: true
 tags: 
 - android
 ---
-My first Android application <a href="https://market.android.com/details?id=com.marcodinacci.android.movierec">is out on the market</a>. Technically it's the second but it's the first on the market.
+I just released my first Android application <a href="https://market.android.com/details?id=com.marcodinacci.android.movierec">on the Android market</a>. Technically it's the second but it's the first one on the market.
 
 <strong>Movie Suggestions</strong> is a simple application that uses a couple of web services to find a list of movies that you may like.  
 <img src="/img/ms_beta_screenshot.png" alt="Movie Suggestions screenshot" title="Movie Suggestions screenshot" width="168" height="300" class="align-left" />
