--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ title: About
     <p>My name is Marco Dinacci and I am a software developer currently living in Cambridge, UK.</p>
     <p>This website is a mostly a technical blog focusing on whatever I'm currently learning/working with at the moment.</p>
 
-    <p>This blog is written in HTML5, <a href="http://lesscss.org/" title="Less homepage">Less</a> 
+    <p>This blog is written (mostly, still migrating old stuff) in HTML5, <a href="http://lesscss.org/" title="Less homepage">Less</a> 
     and compiled to static pages using <a href="http://jekyllrb.com/" title="Jekyll homepage">Jekyll</a>.</p>
 
 </div>
