--- a/_posts/2011-11-10-look-it-job-market.html
+++ b/_posts/2011-11-10-look-it-job-market.html
@@ -8,7 +8,7 @@ tags:
 - jquery
 - ruby
 ---
-<script type="text/javascript" src="/js/crawler/a.js"></script>
+<script type="text/javascript" src="/js/crawler/requirements.js"></script>
 <script type="text/javascript" src="/js/crawler/charts.js"></script>
 <script type="text/javascript" src="/js/crawler/raph.js"></script>
 <script type="text/javascript">
@@ -30,63 +30,65 @@ load();
 .term-cloud-link:hover {text-decoration: underline;}
 </style>
 
-<div id="debug"></div>
+<h3>Introduction</h3>
 
-Few weeks ago I bought an <a href="http://pragprog.com/book/btlang/seven-languages-in-seven-weeks" title="Seven Languages In Seven Weeks">amazing book</a> whose first chapter is an introduction to the Ruby language. I've never really been interested in Ruby before as I'm perfectly happy with Python but I think there's always something to learn when studying a new language. 
+<p>Few weeks ago I bought an <a href="http://pragprog.com/book/btlang/seven-languages-in-seven-weeks" title="Seven Languages In Seven Weeks">amazing book</a> whose first chapter is an introduction to the Ruby language. I've never really been interested in Ruby before as I'm perfectly happy with Python but I think there's always something to learn when studying a new language. 
 
 With this in mind, and considering that I'm looking for a job, I thought to learn Ruby by writing a tool to analyze the technical skills most required by the market today. 
 
-I selected the website that in my opinion offers the more interesting jobs, <a href="http://careers.stackoverflow.com" title="careers.stackoverflow.com" target="_blank">careers.stackoverflow.com</a> I scraped the data and made some visualisations to help me understand it (which, BTW, is limited only to the last 5 weeks). 
+I selected the website that in my opinion offers the more interesting jobs, <a href="http://careers.stackoverflow.com" title="careers.stackoverflow.com" target="_blank">careers.stackoverflow.com</a>, did a bit of scraping and made some visualisations to help me understand the data collected (which, BTW, is limited only to the last 5 weeks). </p>
 
-First, let's <strong>see</strong> what are the technologies required the most: 
+<h3>The data</h3>
+<p>First, let's <strong>see</strong> what are the technologies required the most: </p>
+<br />
 
 <div id="tag_chart_cloud"></div>
 
 <br/>
-Although the data is limited (again, only 5 weeks), we can make some interesting comparisons:
-<ul>
-<li>There's more demand of <strong>Java</strong> developers than <strong>C#</strong> developers. </li>
-<li>More jobs require <strong>Android</strong> knowledge rather than <strong>iOS</strong>, maybe this is also why Java > C#. </li>
-<li><strong>MySQL</strong> beats any other database, including NoSQL ones.</li>
-<li><strong>Javascript</strong> is the most frequent tag, immediately followed by Java.</li>
-<li><strong>Ruby</strong> is less requested than I thought, but maybe requests are distributed among the tags <strong>ruby</strong> and <strong>ruby-on-rails</strong>, I don't know.</li>
-</ul>
+<p>Although the data is limited (again, only 5 weeks), we can make some interesting comparisons:
+	<ul>
+		<li>There's more demand of <strong>Java</strong> developers than <strong>C#</strong> developers. </li>
+		<li>More jobs require <strong>Android</strong> knowledge rather than <strong>iOS</strong>, maybe this is also why Java > C#. </li>
+		<li><strong>MySQL</strong> beats any other database, including NoSQL ones.</li>
+		<li><strong>Javascript</strong> is the most frequent tag, immediately followed by Java.</li>
+		<li><strong>Ruby</strong> is less requested than I thought, but maybe requests are distributed among the tags <strong>ruby</strong> and <strong>ruby-on-rails</strong>, I don't know.</li>
+	</ul>
+</p>
 
-This knowledge is useful but too superficial. Most of the companies are looking for candidates with a knowledge of a <strong>set</strong> of technologies strongly related between them so I made a graph to see which groups of technologies are the most requested. This visualization takes the 20 most occurring tags and analyze which other tags appear with. I shortened some of the words to make the visualization more readable, eg. <em>ror</em> stands for Ruby on Rails while <em>js</em> represents Javascript. 
+<p>This knowledge is useful but too superficial. Most of the companies are looking for candidates with a knowledge of a <strong>set</strong> of technologies strongly related between them so I made a graph to see which groups of technologies are the most requested. This visualization takes the 20 most occurring tags and analyze which other tags appear with. I shortened some of the words to make the visualization more readable, eg. <em>ror</em> stands for Ruby on Rails while <em>js</em> represents Javascript. 
 Each circle represents a tag, the number in each circle represent the number of times that tag appears with the tag label on the left.
 
-(If you don't like the colors reload the page)
+(If you don't like the colors reload the page).</p>
 
 <div id="tagsgraph"></div>
 
-Now I think it's possible to appreciate more which <strong>set</strong> of technologies are currently requested and which one a developer should focus in order to increase his/her changes of landing a job of the ones proposed on careers.stackoverflow.com.
+<p>Now I think it's possible to appreciate more which <strong>set</strong> of technologies are currently requested and which one a developer should focus in order to increase his/her changes of landing a job of the ones proposed on careers.stackoverflow.com.</p>
 
-Let's see some trends:
+<h3>Trends ?</h3>
 
-For frontend web developers that know HTML and CSS it is also necessary to know Javascript and a big advantage is to know JQuery which demonstrates to be the leading Javascript framework. 
-If you're a frontend developer and want to learn a server-side scripting language, PHP (instead of Ruby or Python) seems to be the most requested.
+<p>For frontend web developers that know HTML and CSS it is also necessary to know Javascript and a big advantage is to know JQuery which demonstrates to be the leading Javascript framework. 
+If you're a frontend developer and want to learn a server-side scripting language, PHP (instead of Ruby or Python) seems to be the most requested.</p>
 
-Python is very often associated with Java and C++ but also with Django and Javascript confirming the language versatility. It seems though that companies prefer to use it mostly outside the web, probably as a "second language requirement" for Java or C++ developers. 
-If you know Python already and want to apply it on the web, study Django.
+<p>Python is very often associated with Java and C++ but also with Django and Javascript confirming the language versatility. It seems though that companies prefer to use it mostly outside the web, probably as a "second language requirement" for Java or C++ developers. 
+If you know Python already and want to apply it on the web, study Django.</p>
 
-Nothing surprising in the Microsoft world, .net, C#, Asp.net and SQL server are the technologies required in companies that relies on Microsoft technologies.
+<p>Nothing surprising in the Microsoft world, .net, C#, Asp.net and SQL server are the technologies required in companies that relies on Microsoft technologies.</p>
 
-It's interesting to see C++ and Java so often together. Companies are probably looking for candidates with a knowledge of either one or the other but I think that while a C++ developer can pick up Java pretty fast I've some doubts about the opposite being so easy.
+<p>It's interesting to see C++ and Java so often together. Companies are probably looking for candidates with a knowledge of either one or the other but I think that while a C++ developer can pick up Java pretty fast I've some doubts about the opposite being so easy.</p>
 
-Knowledge of both Android an iOS seems to be well appreciated by companies that probably prefer to have only one developer working on the same application for both platforms. Windows mobile and blackberry skills are not particularly requested.
+<p>Knowledge of both Android an iOS seems to be well appreciated by companies that probably prefer to have only one developer working on the same application for both platforms. Windows mobile and blackberry skills are not particularly requested.</p>
 
-The Spring framework is often demanded when working with Java EE. Interesting to note that Java skills are often requested along with a scripting language like Python, Perl or Groovy. They aren't probably necessary but a candidate with a knowledge of at least one scripting language may have the head over a candidate that does not.
+<p>The Spring framework is often demanded when working with Java EE. Interesting to note that Java skills are often requested along with a scripting language like Python, Perl or Groovy. They aren't probably necessary but a candidate with a knowledge of at least one scripting language may have the head over a candidate that does not.</p>
 
-Finally, since I don't live in a place with a lot of job opportunities, I'm particularly interested in telecommuting job: 
+<p>Finally, since I don't live in a big city with a lot of job opportunities, I'm particularly interested in telecommuting jobs: </p>
 <div id="remote_vs_local_chart"></div>
 
-I guess I should relocate... :(
+<p>Guess I should relocate... :-|</p>
 
-For those interested the code I wrote to collect the data and visualizing it is available on <a href="https://github.com/mdinacci/careers-crawler"> github</a>. 
+<h3>The Code</h3>
+<p>The code to scrape the data and to visualize it is on <a href="https://github.com/mdinacci/careers-crawler"> github</a>.</p>
 
-I think making this kind of tools is a great exercise to learn a new programming language and I really enjoyed doing it in Ruby and Javascript. 
-
-Marco
+<p>I think making this kind of tools is a great exercise to learn a new programming language and I really enjoyed doing it in Ruby and Javascript. </p>
 
 <script type="text/javascript">
 drawTagsRelated();
